<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="100dp"
    android:padding="40dp"
    android:gravity="top|center_horizontal">

    <!-- Titre + Bouton Paramètre -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginBottom="20dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enigme_studio"
            android:textSize="35dp" />

        <Button
            android:id="@+id/buttonParametre"    android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_marginStart="10dp"
            android:text="@string/parametre"
            android:onClick="parametre"

            android:backgroundTint="#FFFFFF"
            android:textStyle="bold"
            android:layout_margin="5dp"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/s_lection_de_niveaux"
        android:textSize="20sp"
        android:layout_marginTop="70dp" />

    <!-- Niveaux -->
    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="3"
        android:layout_marginTop="50dp">

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="I"

            android:backgroundTint="#FFFFFF"
            android:textStyle="bold"
            android:layout_margin="5dp"/>

        <TextView
            android:id="@+id/textViewN1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nonfait"

            android:textColor="#E64418"
            android:textStyle="italic|bold"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="15dp"/>

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="II"
            android:onClick="enigmeMontre"

            android:backgroundTint="#FFFFFF"
            android:textStyle="bold"
            android:layout_margin="5dp"/>

        <TextView
            android:id="@+id/textViewN2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nonfait"

            android:textColor="#E64418"
            android:textStyle="italic|bold"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="15dp"/>

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="III"

            android:backgroundTint="#FFFFFF"
            android:textStyle="bold"
            android:layout_margin="5dp"/>

        <TextView
            android:id="@+id/textViewN3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nonfait"

            android:textColor="#E64418"
            android:textStyle="italic|bold"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="15dp"/>

        <!-- <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="4" />
        <Button
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="5" />
        <Button
            android:id="@+id/button6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="6" />-->
    </GridLayout>

</LinearLayout>
